# learnvault

./: .env.example  .gitignore  .size-limit.json  COMPLETED_WORK.md  CONTRIBUTING.md  Cargo.toml  POOL_IMPLEMENTATION_SUMMARY.md  PR_SUMMARY.md  README.md  SENTRY_ALERT_RULES.md  SENTRY_SETUP_GUIDE.md  TREASURY_API_IMPLEMENTATION.md  codecov.yml  convert-images.mjs  eslint.config.js  index.html  issues.md  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bounty_request.md
.github/workflows/: backend-tests.yml  build.yml  bundle-size.yml  deploy-staging.yml  frontend-ci.yml  loadtest-staging.yml  preview-cleanup.yml  preview-comment.yml  publish-docker.yml  security-scan.yml  server-ci.yml
.husky/: pre-commit
contracts/: deploy.config.ts
contracts/course_milestone/: Cargo.toml
contracts/course_milestone/src/: lib.rs  test.rs
contracts/scripts/: deploy-all.ts
docs/: SECURITY_REVIEW.md  brand-guide.md  contracts.md  csrf-protection.md  database-pool-config.md  pr-008.md  request-tracing.md  troubleshooting.md
docs/adr/: ADR-008.md
docs/contracts/: upgrade-procedure.md
docs/contributing/: testing.md
docs/database/: indexes.md
docs/deployment/: environment-variables.md
docs/security/: access-control.md
e2e/: a11y.spec.ts  comments.spec.ts  critical-flows.spec.ts  error-states.spec.ts  scholarship-lifecycle.spec.ts  wallet-auth.spec.ts
e2e/fixtures/: mock-dao-api.ts  mock-scholarship.ts
loadtests/k6/: README.md  smoke.js
server/: .dockerignore  .env.example  Dockerfile  docker-compose.test.yml  docker-compose.yml  jest.config.js  package-lock.json  package.json  tsconfig.json
server/scripts/: query-analysis.ts  verify-migrations.ts
server/src/: index.ts  openapi.ts
src/: App.tsx  i18n.ts  index.css  main.tsx
src/components/: ActivityFeed.tsx  AddressDisplay.tsx  BookmarkButton.tsx  CommentCard.tsx  CommentSection.tsx  ConfirmDialog.tsx  ConnectWalletGuard.tsx  CourseCard.tsx  ErrorBoundary.tsx  GlobalSearch.tsx  IdenticonAvatar.tsx  (+24 more)
(+230 files in other folders)
