[workspace]
members = ["contracts/*"]
exclude = ["contracts/testdata", "contracts/scripts"]
resolver = "2"

[workspace.package]
authors = ["LearnVault Contributors"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/bakeronchain/learnvault"
version = "0.0.1"

[workspace.dependencies.soroban-sdk]
version = "23.1.0"

[workspace.dependencies.learnvault-shared]
path = "contracts/shared"

[workspace.dependencies.proptest]
version = "1.5"

[profile.release]
opt-level = "z"
debug = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
overflow-checks = true
strip = true

[profile.release-with-logs]
debug-assertions = true
inherits = "release"
